M87/force-app/main/default/objects/EventLog2__b/EventLog2__b.object-meta.xml
<CustomObject>
    <label>Event Log (BigObject)</label>
    <pluralLabel>Event Logs (BigObject)</pluralLabel>
</CustomObject>