M87/force-app/main/default/objects/EventLog2__b/fields/EventDate__c.field-meta.xml
<CustomField>
    <fullName>EventDate__c</fullName>
    <label>Event Date</label>
    <type>DateTime</type>
</CustomField>