M87/force-app/main/default/objects/EventLog2__b/fields/EventId__c.field-meta.xml
<CustomField>
    <fullName>EventId__c</fullName>
    <label>Event Id</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>