M87/force-app/main/default/objects/EventLog2__b/fields/Quiddity__c.field-meta.xml
<CustomField>
    <fullName>Quiddity__c</fullName>
    <label>Quiddity</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>